--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,27 @@ services:
       # Place to persist data between container runs
       - db_data:/var/lib/postgresql/data
 
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    depends_on:
+      - db
+    environment:
+      MIX_ENV: dev
+      DATABASE_URL: postgres://postgres:postgres@db:5432/markmurphydev_dev
+      POLYGON_API_KEY: "${POLYGON_API_KEY}"
+      # For dev, I think it's fine to have it be public.
+      SECRET_KEY_BASE: j+iC8LVnNdLNVHGr5hHjHb6nH2473FB+itBDzkTxlv8gjPW0A4l6NcALF88daSg4
+    ports:
+      - "4000:4000"
+    volumes:
+      # Bind mount -- mount ./ on disk (the project folder) into the container at /app
+      - .:/app
+    # command: iex --dbg pry -S mix phx.server
+    command: /bin/bash
+    stdin_open: true
+    tty: true
+
 volumes:
   db_data:
